fixed alignment search bar + h1

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,7 +13,7 @@
   color: white;
   position: absolute;
   top: 30%;
-  left: 25%;
+  // left: 25%;
 }
 
 .banner p {
